# R-Type

./: Play.bat  README.md
R-Type/ClientFinal/: CMakeLists.txt  ClientFinal.opensdf  ClientFinal.sln
R-Type/ClientFinal/ClientFinal/: BackgroundAnimation.cpp  BackgroundAnimation.h  Client.cpp  Client.h  ClientFinal.vcxproj  ClientFinal.vcxproj.filters  ClientManager.cpp  ClientManager.h  Controller.hpp  Game.cpp  Game.h  GameEventManager.cpp  GameEventManager.h  GamePadController.cpp  GameSession.cpp  GameSession.h  GraphicalElem.cpp  GraphicalElem.h  InputPopupValue.cpp  InputPopupValue.h  KeyBoardController.cpp  Lobby.cpp  Lobby.h  MapDownloader.cpp  MapDownloader.h  MapSelected.cpp  MapSelected.h  RTypeGame.cpp  RTypeGame.h  SFMLchatText.cpp  SFMLchatText.h  SFMLendingGamePopUp.cpp  SFMLendingGamePopUp.h  SFMLloadingGamePopUp.cpp  SFMLloadingGamePopUp.h  SFMLobjRepresentation.cpp  SFMLobjRepresentation.h  SFMLpausePopUp.cpp  SFMLpausePopUp.h  SFMLscore.cpp  (+6 more)
R-Type/Common/Header/: Factory.hpp  FileSystem.hpp  GameAction.hh  Level.hh  LibLoader.h  LibManager.h  MemoryPool.hpp  ObjectRepresentation.hpp  Observer.hpp  Plugin.h  ResourcesPackage.h  ResourcesPackageClient.h  ResourcesPackageServer.h  Singleton.hpp  Vector2D.h  XML_Level.hh
R-Type/Common/Source/: Level.cpp  LibLoader.cpp  LibManager.cpp  ResourcesPackage.cpp  ResourcesPackageClient.cpp  ResourcesPackageServer.cpp  Vector2D.cpp  XML_Level.cpp
R-Type/GamePlay/Headers/: GameContainer.h  GameObject.h  Monster.h
R-Type/GamePlay/Sources/: GameContainer.cpp  GameObject.cpp  Monster.cpp
R-Type/Network/Headers/: FileManager.h  GameMessage.h  GameMessageDispacher.hpp  NetClient.h  NetClientManager.h  NetServer.h  NetServerManager.h  NetUser.h  ObjectRepresentation.h  PlayerAction.h  Session.h  SessionManager.h  TCPFrame.h  TCPHeader.h  TCPManager.h  TCPManagerClient.h  TCPManagerServer.h  TCPMessageFactory.h  TCPMessageFactoryClient.h  TCPMessageFactoryServer.h  TCPSocket.h  UDPFrame.h  UDPHeader.h  UDPManager.h  UDPManagerClient.h  UDPSocket.h  Values.h
R-Type/Network/Sources/: FileManager.cpp  GameMessage.cpp  NetClient.cpp  NetClientManager.cpp  NetServer.cpp  NetServerManager.cpp  NetUser.cpp  ObjectRepresentation.cpp  PlayerAction.cpp  Session.cpp  SessionManager.cpp  TCPFrame.cpp  TCPHeader.cpp  TCPManager.cpp  TCPManagerClient.cpp  TCPManagerServer.cpp  TCPMessageFactory.cpp  TCPMessageFactoryClient.cpp  TCPMessageFactoryServer.cpp  TCPSocket.cpp  UDPFrame.cpp  UDPHeader.cpp  UDPManager.cpp  UDPManagerClient.cpp  UDPSocket.cpp
R-Type/Plugin/: CMakeLists.txt
R-Type/Plugin/=plugin/Moskito/: Moskito.exp  Moskito.lib
R-Type/Plugin/=plugin/PlayerShip/: PlayerShip.exp  PlayerShip.lib
R-Type/Plugin/FireBall/: CMakeLists.txt  FireBall.cpp  FireBall.h
R-Type/Plugin/Moskito/: CMakeLists.txt  Makefile
R-Type/Plugin/Moskito/Sources/: Moskito.cpp  Moskito.h
R-Type/Plugin/Moskito/VS_solution/: Moskito.sln
R-Type/Plugin/PlayerShip/: CMakeLists.txt  PlayerShip.cpp  PlayerShip.hh  PlayerShip.sln
R-Type/Plugin/PlayerShip/PlayerShip/: PlayerShip.vcxproj
R-Type/Server/: CMakeLists.txt
R-Type/Server/Includes/: Client.hh  CommandLine.hh  GamePackage.hh  GameSession.hh  IPlayer.hh  Interrupt.hh  Player.hh  PluginStorage.hh  Scores.hh  Server.hh  TCPHandler.hh  Utilities.hpp
R-Type/Server/Sources/: Client.cpp  CommandLine.cpp  GamePackage.cpp  GameSession.cpp  Interrupt.cpp  Player.cpp  PluginStorage.cpp  Scores.cpp  Server.cpp  ServerHandlers.cpp  TCPHandler.cpp  main.cpp
R-Type/menuRtype/Includes/: Timer.h
R-Type/menuRtype/Includes/Audio/: Playlist.hh  Sound.hh
R-Type/menuRtype/Includes/SFMLevents/: EditorEventManager.h  EventManager.h  IEventManager.h  SFMLbuttonevents.h  SFMLinputevents.h
R-Type/menuRtype/Includes/SFMLmenus/: ISFMLmenu.h  SFMLbaseEditor.h  SFMLbasePopUp.h  SFMLeditor.h  SFMLlauncherMenu.h  SFMLlengthlevelPopUp.h  SFMLlevelscoreMenu.h  SFMLmainMenu.h  SFMLmapscoreSelectorMenu.h  SFMLmenu.h  SFMLmultiMenu.h  SFMLmultimapSelectorMenu.h  SFMLmultiplayerLobbyMenu.h  SFMLoptionMenu.h  SFMLplayMenu.h  SFMLplaymapSelectorMenu.h  SFMLsolomapSelectorMenu.h
R-Type/menuRtype/Includes/SFMLshapes/: SFMLanimatedSprite.h  SFMLbasicInput.h  SFMLbasicSlider.h  SFMLbasicText.h  SFMLbigButton.h  SFMLbutton.h  SFMLbuttonLauncher.h  SFMLcharacterInput.h  SFMLdropdown.h  SFMLdropdownMultiplayer.h  SFMLeditormenuButton.h  SFMLinput.h  SFMLinputLauncher.h  SFMLlittleButton.h  SFMLmapselectorButton.h  SFMLmonsterButton.h  SFMLmonsterDnD.h  SFMLmultigameButton.h  SFMLobjDragAndDrop.h  SFMLplayermulti.h  SFMLshape.h  SFMLslider.h  SFMLsubmenuButton.h  SFMLunrotateDropdown.h
R-Type/menuRtype/Includes/Singletons/: databaseSFML.h  gameOptions.h  menuManager.h  windowSFML.h
R-Type/menuRtype/Libs/: libsfml-graphics.so.2.1  libsfml-system.so.2  sfml-audio-d-2.ilk  sfml-audio-d.exp  sfml-audio-d.lib  sfml-audio-s-d.lib  sfml-audio-s.lib  sfml-graphics-d-2.ilk  sfml-graphics-d.exp  sfml-graphics-d.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-s.lib  sfml-system-d-2.ilk  sfml-system-d.exp  sfml-system-d.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-window-d-2.ilk  sfml-window-d.exp  sfml-window-d.lib  sfml-window-s-d.lib  sfml-window-s.lib
R-Type/menuRtype/Libs/maps/: 1_0  1_1  4_0  6_0  6_2  6_3  6_4  6_5  7_0  omg.map
R-Type/menuRtype/Sources/: Timer.cpp  menuRtype.cpp
R-Type/menuRtype/Sources/Audio/: Playlist.cpp  Sound.cpp  main.cpp
R-Type/menuRtype/Sources/SFMLevents/: EditorEventManager.cpp  EventManager.cpp  SFMLbuttonevents.cpp  SFMLinputevents.cpp
R-Type/menuRtype/Sources/SFMLmenus/: SFMLbaseEditor.cpp  SFMLbasePopUp.cpp  SFMLeditor.cpp  SFMLlauncherMenu.cpp  SFMLlengthlevelPopUp.cpp  SFMLlevelscoreMenu.cpp  SFMLmainMenu.cpp  SFMLmapscoreSelectorMenu.cpp  SFMLmenu.cpp  SFMLmultiMenu.cpp  SFMLmultimapSelectorMenu.cpp  SFMLmultiplayerLobbyMenu.cpp  SFMLoptionMenu.cpp  SFMLplayMenu.cpp  SFMLplaymapSelectorMenu.cpp  SFMLsolomapSelectorMenu.cpp
R-Type/menuRtype/Sources/SFMLshapes/: SFMLanimatedSprite.cpp  SFMLbasicInput.cpp  SFMLbasicSlider.cpp  SFMLbasicText.cpp  SFMLbigButton.cpp  (+19 more)
(+15 files in other folders)
